--- a/tools/changelog
+++ b/tools/changelog
@@ -2,7 +2,7 @@
 
 # Exports
 
-. $ANDROID_BUILD_TOP/vendor/batik/tools/colors
+#. $ANDROID_BUILD_TOP/vendor/batik/tools/colors
 
 export Changelog=Changelog.txt
 
